--- a/config/sync/block.block.elsa_anhomepageheroblock.yml
+++ b/config/sync/block.block.elsa_anhomepageheroblock.yml
@@ -1,6 +1,6 @@
 uuid: 2ed3e726-d76b-4035-9e5f-e56dca66e217
 langcode: en
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:hero_call_to_action_block:8bb9d4bb-f182-4afc-b138-8a4b802824e4'
@@ -12,7 +12,7 @@ dependencies:
     - elsa
 id: elsa_anhomepageheroblock
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -5
 provider: null
 plugin: 'block_content:8bb9d4bb-f182-4afc-b138-8a4b802824e4'
