--- a/config/sync/block.block.elsa_exposed_form_search_users_page_sidebar.yml
+++ b/config/sync/block.block.elsa_exposed_form_search_users_page_sidebar.yml
@@ -1,6 +1,6 @@
 uuid: 13a5d11d-aa68-4442-bfd1-db07e5fdcb4f
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.search_users
@@ -11,7 +11,7 @@ dependencies:
     - elsa
 id: elsa_exposed_form_search_users_page_sidebar
 theme: elsa
-region: sidebar_right_top
+region: nav
 weight: -24
 provider: null
 plugin: 'views_exposed_filter_block:search_users-page'
