--- a/config/sync/block.block.elsa_exposedformtopicspage_profile.yml
+++ b/config/sync/block.block.elsa_exposedformtopicspage_profile.yml
@@ -1,6 +1,6 @@
 uuid: d11f9f64-8409-464e-a239-e65df6b6956b
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.topics
@@ -12,7 +12,7 @@ dependencies:
     - elsa
 id: elsa_exposedformtopicspage_profile
 theme: elsa
-region: sidebar_right_top
+region: nav
 weight: -25
 provider: null
 plugin: 'views_exposed_filter_block:topics-page_profile'
