--- a/config/sync/block.block.elsa_exposedformupcoming_eventspage_community_events.yml
+++ b/config/sync/block.block.elsa_exposedformupcoming_eventspage_community_events.yml
@@ -1,6 +1,6 @@
 uuid: 3742358a-f7da-4b9b-b410-566b8025c776
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.upcoming_events
@@ -11,7 +11,7 @@ dependencies:
     - elsa
 id: elsa_exposedformupcoming_eventspage_community_events
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -13
 provider: null
 plugin: 'views_exposed_filter_block:upcoming_events-page_community_events'
