--- a/config/sync/block.block.elsa_group_add_event_block.yml
+++ b/config/sync/block.block.elsa_group_add_event_block.yml
@@ -1,6 +1,6 @@
 uuid: 3b43306a-27a4-4200-a6ff-ac5a7c5f6a4f
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - social_group
@@ -9,7 +9,7 @@ dependencies:
     - elsa
 id: elsa_group_add_event_block
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -22
 provider: null
 plugin: group_add_event_block
