--- a/config/sync/block.block.elsa_postongroupblock.yml
+++ b/config/sync/block.block.elsa_postongroupblock.yml
@@ -1,6 +1,6 @@
 uuid: b0d96f5a-ba54-4ad3-b427-b668f21caba2
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - social_post_photo
@@ -11,7 +11,7 @@ _core:
   default_config_hash: jM4rDaxSleva7mQiyaRj-ESpAcur9wzSXDfeXdGbOjk
 id: elsa_postongroupblock
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -17
 provider: null
 plugin: post_photo_group_block
