--- a/config/sync/block.block.elsa_postonprofileblock.yml
+++ b/config/sync/block.block.elsa_postonprofileblock.yml
@@ -1,6 +1,6 @@
 uuid: 81119d47-798a-40ec-8f29-124aea4cd4b4
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - social_post_photo
@@ -11,7 +11,7 @@ _core:
   default_config_hash: b5E5NPiSRKlKRNZcEWgscia7LJXEHE6iMoBAyh0uJRU
 id: elsa_postonprofileblock
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -16
 provider: null
 plugin: post_photo_profile_block
