--- a/config/sync/block.block.elsa_views_block__activity_stream_group_block_stream_group.yml
+++ b/config/sync/block.block.elsa_views_block__activity_stream_group_block_stream_group.yml
@@ -1,6 +1,6 @@
 uuid: cf1bd383-9836-4c6e-811a-a8436cbe0db5
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.activity_stream_group
@@ -11,7 +11,7 @@ dependencies:
     - elsa
 id: elsa_views_block__activity_stream_group_block_stream_group
 theme: elsa
-region: sidebar_right_bottom
+region: nav
 weight: -19
 provider: null
 plugin: 'views_block:activity_stream_group-block_stream_group'
