--- a/config/sync/block.block.elsa_views_block__upcoming_events_block_my_upcoming_events.yml
+++ b/config/sync/block.block.elsa_views_block__upcoming_events_block_my_upcoming_events.yml
@@ -12,8 +12,8 @@ dependencies:
     - elsa
 id: elsa_views_block__upcoming_events_block_my_upcoming_events
 theme: elsa
-region: auxiliary_sidebar
-weight: -24
+region: sidebar_right_top
+weight: -27
 provider: null
 plugin: 'views_block:upcoming_events-block_my_upcoming_events'
 settings:
