--- a/config/sync/block.block.elsa_views_block__upcoming_events_upcoming_events_group.yml
+++ b/config/sync/block.block.elsa_views_block__upcoming_events_upcoming_events_group.yml
@@ -1,6 +1,6 @@
 uuid: 2d63a7a5-8456-4b0a-b990-8d53396cb758
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.upcoming_events
@@ -11,8 +11,8 @@ dependencies:
     - elsa
 id: elsa_views_block__upcoming_events_upcoming_events_group
 theme: elsa
-region: auxiliary_sidebar
-weight: -23
+region: nav
+weight: -27
 provider: null
 plugin: 'views_block:upcoming_events-upcoming_events_group'
 settings:
