--- a/config/sync/core.entity_form_display.node.topic.default.yml
+++ b/config/sync/core.entity_form_display.node.topic.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.topic.field_content_visibility
     - field.field.node.topic.field_development_objective
     - field.field.node.topic.field_files
+    - field.field.node.topic.field_themes
     - field.field.node.topic.field_topic_comments
     - field.field.node.topic.field_topic_image
     - field.field.node.topic.field_topic_type
@@ -24,6 +25,7 @@ third_party_settings:
     group_topic_content:
       children:
         - field_topic_type
+        - field_themes
         - title
         - field_topic_image
       parent_name: ''
@@ -39,7 +41,7 @@ third_party_settings:
       children:
         - body
       parent_name: ''
-      weight: 2
+      weight: 3
       label: 'Topic description'
       format_type: fieldset
       format_settings:
@@ -63,7 +65,7 @@ third_party_settings:
       children:
         - field_files
       parent_name: ''
-      weight: 5
+      weight: 6
       label: Attachments
       format_type: fieldset
       format_settings:
@@ -89,7 +91,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -100,7 +102,7 @@ content:
     type: options_buttons
     region: content
   field_development_objective:
-    weight: 26
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -115,14 +117,20 @@ content:
     third_party_settings: {  }
     type: file_generic
     region: content
+  field_themes:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
   field_topic_comments:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: comment_default
     region: content
   field_topic_image:
-    weight: 4
+    weight: 5
     settings:
       show_crop_area: true
       show_default_crop: true
@@ -132,6 +140,7 @@ content:
         - hero
         - teaser
       progress_indicator: throbber
+      warn_multiple_usages: true
     third_party_settings: {  }
     type: image_widget_crop
     region: content
@@ -143,13 +152,20 @@ content:
     region: content
   path:
     type: path
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 10
+    region: content
+    third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -157,7 +173,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
