--- a/config/sync/core.entity_view_display.node.topic.default.yml
+++ b/config/sync/core.entity_view_display.node.topic.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.topic.field_content_visibility
     - field.field.node.topic.field_development_objective
     - field.field.node.topic.field_files
+    - field.field.node.topic.field_themes
     - field.field.node.topic.field_topic_comments
     - field.field.node.topic.field_topic_image
     - field.field.node.topic.field_topic_type
@@ -45,6 +46,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: file_default
+    region: content
+  field_themes:
+    weight: 12
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_topic_comments:
     weight: 1
