--- a/config/sync/core.entity_view_display.profile.profile.teaser.yml
+++ b/config/sync/core.entity_view_display.profile.profile.teaser.yml
@@ -76,6 +76,9 @@ content:
     region: content
 hidden:
   field_profile_expertise: true
+  field_profile_gender: true
   field_profile_interests: true
+  field_profile_location: true
+  field_profile_project: true
   field_profile_self_introduction: true
   field_profile_show_email: true
