--- a/html/themes/custom/partners_colab/partners_colab.info.yml
+++ b/html/themes/custom/partners_colab/partners_colab.info.yml
@@ -1,10 +1,28 @@
 name: Partners CoLab
 type: theme
 description: Open Social sub-theme for ME&L USAID El Salvador
-package: Other
+package: Custom
 core: 8.x
-libraries:
-  - partners_colab/global-styling
- 
 base theme: socialbase
+# Defines libraries group in which we can add css/js
+libraries:
+  - elsa/global-css
+  - elsa/global-js
+# Regions
+regions:
+  header: Header
+  breadcrumb: Breadcrumb
+  hero: Hero
+  secondary_navigation: Secondary navigation
+  content_top: Content top
+  title: Page title
+  content: Content
+  complementary_top: Complementary top
+  complementary_bottom: Complementary bottom
+  content_bottom: Content bottom
+  sidebar_first: Sidebar First
+  sidebar_second: Sidebar Second
+  footer: Footer
+  disabled: 'Disabled'
+
 
