updated regions and includes layout templates

--- a/html/themes/custom/partners_colab/partners_colab.info.yml
+++ b/html/themes/custom/partners_colab/partners_colab.info.yml
@@ -6,8 +6,8 @@ core: 8.x
 base theme: socialbase
 # Defines libraries group in which we can add css/js
 libraries:
-  - elsa/global-css
-  - elsa/global-js
+  - partners_colab/global-css
+  - partners_colab/global-js
 # Regions
 regions:
   header: Header
