CONFIG| moving blocks to sidebar regions

--- a/config/sync/block.block.partners_colab_addtoanybuttons.yml
+++ b/config/sync/block.block.partners_colab_addtoanybuttons.yml
@@ -9,7 +9,7 @@ dependencies:
     - partners_colab
 id: partners_colab_addtoanybuttons
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -29
 provider: null
 plugin: addtoany_block
