--- a/config/sync/block.block.exposedformfollowingfollowing_2.yml
+++ b/config/sync/block.block.exposedformfollowingfollowing_2.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: exposedformfollowingfollowing_2
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -28
 provider: null
 plugin: 'views_exposed_filter_block:following-following'
