--- a/config/sync/block.block.partners_colab_exposed_form_search_content_page_sidebar.yml
+++ b/config/sync/block.block.partners_colab_exposed_form_search_content_page_sidebar.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposed_form_search_content_page_sidebar
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -18
 provider: null
 plugin: 'views_exposed_filter_block:search_content-page'
