--- a/config/sync/block.block.partners_colab_exposedformeventsevents_overview.yml
+++ b/config/sync/block.block.partners_colab_exposedformeventsevents_overview.yml
@@ -12,7 +12,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposedformeventsevents_overview
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -20
 provider: null
 plugin: 'views_exposed_filter_block:events-events_overview'
