--- a/config/sync/block.block.partners_colab_exposedformgroup_eventspage_group_events.yml
+++ b/config/sync/block.block.partners_colab_exposedformgroup_eventspage_group_events.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposedformgroup_eventspage_group_events
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -29
 provider: null
 plugin: 'views_exposed_filter_block:group_events-page_group_events'
