--- a/config/sync/block.block.partners_colab_exposedformgroup_topicspage_group_topics.yml
+++ b/config/sync/block.block.partners_colab_exposedformgroup_topicspage_group_topics.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposedformgroup_topicspage_group_topics
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -21
 provider: null
 plugin: 'views_exposed_filter_block:group_topics-page_group_topics'
