--- a/config/sync/block.block.partners_colab_exposedformlatest_topicspage_latest_topics.yml
+++ b/config/sync/block.block.partners_colab_exposedformlatest_topicspage_latest_topics.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposedformlatest_topicspage_latest_topics
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -19
 provider: null
 plugin: 'views_exposed_filter_block:latest_topics-page_latest_topics'
