--- a/config/sync/block.block.partners_colab_exposedformupcoming_eventspage_community_events.yml
+++ b/config/sync/block.block.partners_colab_exposedformupcoming_eventspage_community_events.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_exposedformupcoming_eventspage_community_events
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -15
 provider: null
 plugin: 'views_exposed_filter_block:upcoming_events-page_community_events'
