--- a/config/sync/block.block.partners_colab_views_block__event_enrollments_event_enrollments_socialbase.yml
+++ b/config/sync/block.block.partners_colab_views_block__event_enrollments_event_enrollments_socialbase.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__event_enrollments_event_enrollments_socialbase
 theme: partners_colab
-region: complementary_top
+region: sidebar_first
 weight: -22
 provider: null
 plugin: 'views_block:event_enrollments-event_enrollments'
