--- a/config/sync/block.block.partners_colab_views_block__group_members_block_newest_members.yml
+++ b/config/sync/block.block.partners_colab_views_block__group_members_block_newest_members.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__group_members_block_newest_members
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -19
 provider: null
 plugin: 'views_block:group_members-block_newest_members'
