--- a/config/sync/block.block.partners_colab_views_block__groups_block_user_groups.yml
+++ b/config/sync/block.block.partners_colab_views_block__groups_block_user_groups.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__groups_block_user_groups
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -20
 provider: null
 plugin: 'views_block:groups-block_user_groups'
