--- a/config/sync/block.block.partners_colab_views_block__newest_users_block_newest_users.yml
+++ b/config/sync/block.block.partners_colab_views_block__newest_users_block_newest_users.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__newest_users_block_newest_users
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -18
 provider: null
 plugin: 'views_block:newest_users-block_newest_users'
