--- a/config/sync/block.block.partners_colab_views_block__topics_block_user_topics.yml
+++ b/config/sync/block.block.partners_colab_views_block__topics_block_user_topics.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__topics_block_user_topics
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -22
 provider: null
 plugin: 'views_block:topics-block_user_topics'
