--- a/config/sync/block.block.partners_colab_views_block__upcoming_events_block_community_events.yml
+++ b/config/sync/block.block.partners_colab_views_block__upcoming_events_block_community_events.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__upcoming_events_block_community_events
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -26
 provider: null
 plugin: 'views_block:upcoming_events-block_community_events'
