--- a/config/sync/block.block.partners_colab_views_block__upcoming_events_block_my_upcoming_events.yml
+++ b/config/sync/block.block.partners_colab_views_block__upcoming_events_block_my_upcoming_events.yml
@@ -12,7 +12,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__upcoming_events_block_my_upcoming_events
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -27
 provider: null
 plugin: 'views_block:upcoming_events-block_my_upcoming_events'
