--- a/config/sync/block.block.partners_colab_views_block__upcoming_events_upcoming_events_group.yml
+++ b/config/sync/block.block.partners_colab_views_block__upcoming_events_upcoming_events_group.yml
@@ -11,7 +11,7 @@ dependencies:
     - partners_colab
 id: partners_colab_views_block__upcoming_events_upcoming_events_group
 theme: partners_colab
-region: complementary_bottom
+region: sidebar_second
 weight: -25
 provider: null
 plugin: 'views_block:upcoming_events-upcoming_events_group'
