--- a/html/themes/custom/partners_colab/package.json
+++ b/html/themes/custom/partners_colab/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "gulp": "^3.9.1",
+    "gulp-accessibility": "^3.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-imagemin": "^3.1.1",
