--- a/config/sync/block.block.socialblue_pagetitleblock.yml
+++ b/config/sync/block.block.socialblue_pagetitleblock.yml
@@ -26,6 +26,7 @@ visibility:
       event: event
       page: page
       topic: topic
+      book: book
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
