--- a/config/sync/views.view.learning_library_items.yml
+++ b/config/sync/views.view.learning_library_items.yml
@@ -82,16 +82,36 @@ display:
           summary: ''
           description: ''
           columns:
+            extension: extension
             title: title
+            created: created
+            field_themes: field_themes
           info:
+            extension:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             title:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-          default: '-1'
+            created:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_themes:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: created
           empty_table: false
       row:
         type: fields
@@ -168,7 +188,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Title
+          label: Description
           exclude: false
           alter:
             alter_text: false
@@ -231,7 +251,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Authored on'
+          label: Date
           exclude: false
           alter:
             alter_text: false
@@ -275,7 +295,7 @@ display:
           click_sort_column: value
           type: timestamp
           settings:
-            date_format: social_medium_date
+            date_format: social_long_date
             custom_date_format: ''
             timezone: ''
           group_column: value
@@ -350,8 +370,8 @@ display:
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
-          multi_type: separator
-          separator: ', '
+          multi_type: ul
+          separator: ''
           field_api_classes: false
           plugin_id: field
       filters:
@@ -375,22 +395,7 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
-      sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
+      sorts: {  }
       title: Resources
       header: {  }
       footer: {  }
